refactor: isolate HFactor build